# LdtkBevyTest

./: Cargo.toml  README.md
assets/: level.ldtk
src/: main.rs
src/colliders/: component.rs
src/entities/: mod.rs
src/entities/player/: components.rs  mod.rs  systems.rs
src/entities/samurai_pig_ghost/: components.rs  mod.rs  systems.rs
src/intgrids/wall/: components.rs  mod.rs  systems.rs
