[package]
name = "bevy_topdown_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_ecs_ldtk = "0.9"
bevy_asset_loader ={ version = "0.19", features = ["2d"] }
bevy-inspector-egui = "0.22.1"
bevy_rapier2d = "0.23.0"